// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evaluates component interpolations 1`] = `
"const {
  styled
} = require('../react');

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});
const Paragraph =
/*#__PURE__*/
styled(\\"p\\")({
  name: \\"Paragraph\\",
  class: \\"Paragraph_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg{color:red;}
.Paragraph_abcdefg .Title_abcdefg{color:blue;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"},{\\"generated\\":{\\"line\\":2,\\"column\\":0},\\"original\\":{\\"line\\":7,\\"column\\":6},\\"name\\":\\"Paragraph_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[\\"../react\\"]
*/"
`;

exports[`evaluates expressions with dependencies 1`] = `
"import slugify from '../slugify';
const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"6og6jy\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[\\"../slugify\\"]
*/"
`;

exports[`evaluates expressions with expressions depending on shared dependency 1`] = `
"const slugify = require('../slugify');

const boo = t => slugify(t) + 'boo';

const bar = t => slugify(t) + 'bar';

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"6og6jyboo6og6jybar\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":6,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[\\"../slugify\\"]
*/"
`;

exports[`evaluates identifier in scope 1`] = `
"const answer = 42;

const foo = () => answer;

const days = foo() + ' days';
const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"42 days\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":5,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`evaluates local expressions 1`] = `
"const answer = 42;

const foo = () => answer;

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"42 days\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":4,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`evaluates multiple expressions with shared dependency 1`] = `
"const slugify = require('../slugify');

const boo = t => slugify(t) + 'boo';

const bar = t => slugify(t) + 'bar';

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"6og6jyboo\\" content:\\"6og6jybar\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":6,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[\\"../slugify\\"]
*/"
`;

exports[`ignores external expressions 1`] = `
"const generate = props => props.content;

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\",
  vars: {
    \\"abcdefg-0-0\\": [generate]
  }
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"var(--abcdefg-0-0)\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":3,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`ignores inline arrow function expressions 1`] = `
"const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\",
  vars: {
    \\"abcdefg-0-0\\": [props => props.content]
  }
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"var(--abcdefg-0-0)\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`ignores inline vanilla function expressions 1`] = `
"const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\",
  vars: {
    \\"abcdefg-0-0\\": [function (props) {
      return props.content;
    }]
  }
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg:before{content:\\"var(--abcdefg-0-0)\\";}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":1,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`inlines object styles as CSS string 1`] = `
"const fill = (top = 0, left = 0, right = 0, bottom = 0) => ({
  position: 'absolute',
  top,
  right,
  bottom,
  left
});

const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"Title_abcdefg\\"
});

/*
CSS OUTPUT TEXT START
.Title_abcdefg{position:absolute;top:0;right:0;bottom:0;left:0;}

CSS OUTPUT TEXT END

CSS OUTPUT MAPPINGS:[{\\"generated\\":{\\"line\\":1,\\"column\\":0},\\"original\\":{\\"line\\":9,\\"column\\":6},\\"name\\":\\"Title_abcdefg\\"}]
CSS OUTPUT DEPENDENCIES:[]
*/"
`;

exports[`throws codeframe error when evaluation fails 1`] = `
"<<DIRNAME>>/source.js: An error occurred when evaluating the expression: This will fail. Make sure you are not using a browser or Node specific API.
[0m [90m 2 | [39m[0m
[0m [90m 3 | [39m[36mconst[39m [33mTitle[39m [33m=[39m styled[33m.[39mh1[32m\`[39m[0m
[0m[31m[1m>[22m[39m[90m 4 | [39m[32m  font-size: \${foo()}px;[39m[0m
[0m [90m   | [39m               [31m[1m^[22m[39m[0m
[0m [90m 5 | [39m[32m\`[39m[33m;[39m[0m"
`;
